--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ test_lib = []
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
+glam = "0.29.2"
 pico-args = "0.5.0"
+rayon = "1.10.0"
 regex = "1.11.1"
 tinyjson = "2.5.1"
 
