--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
 glam = "0.29.2"
 itertools = "0.13.0"
+once_cell = "1.20.2"
 pico-args = "0.5.0"
 rayon = "1.10.0"
 regex = "1.11.1"
