--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ dhat = { version = "0.3.3", optional = true }
 glam = "0.29.2"
 itertools = "0.13.0"
 once_cell = "1.20.2"
+pathfinding = "4.12.0"
 pico-args = "0.5.0"
 rayon = "1.10.0"
 regex = "1.11.1"
