--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ test_lib = []
 chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
 glam = "0.29.2"
+hashbrown = "0.15.2"
 itertools = "0.13.0"
 memoize = "0.4.2"
 once_cell = "1.20.2"
