--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ pathfinding = "4.12.0"
 pico-args = "0.5.0"
 rayon = "1.10.0"
 regex = "1.11.1"
+rstest = "0.23.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
